# asw-prelegal-demo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: conversation.py  user.py
backend/app/registry/: document_registry.py
backend/app/routers/: auth.py  catalog.py  chat.py  health.py
backend/app/schemas/: auth.py  catalog.py  chat.py
backend/app/services/: chat_service.py  user_service.py
backend/app/tests/: conftest.py  test_auth.py  test_catalog.py  test_chat.py  test_health.py
frontend/: TESTING.md  jest.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/src/__tests__/components/: FormField.test.tsx  NDACoverPage.test.tsx  NDAPreview.test.tsx  NDAStandardTerms.test.tsx  RadioGroup.test.tsx  StateSelect.test.tsx  WizardShell.test.tsx
frontend/src/__tests__/e2e/: accessibility.spec.ts  cross-browser.spec.ts  pdf-download.spec.ts  wizard-flow.spec.ts
frontend/src/__tests__/unit/: constants.test.ts  ndaSchema.test.ts  ndaStore.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/nda/: page.tsx
frontend/src/components/chat/: AuthGate.tsx  ChatLayout.tsx  ChatMessage.tsx  ChatPanel.tsx
frontend/src/components/preview/: DocumentFieldsPreview.tsx  (+4 more)
frontend/src/lib/: chatApi.ts  constants.ts  documentCatalog.ts  documentStore.ts  generatePdf.ts  ndaSchema.ts  ndaStore.ts
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
(+9 files in other folders)
