[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal SaaS backend - FastAPI with SQLite"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "litellm>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
